--- a/src/app/_component/setting-layout/xml-configuration/xml-configuration.component.html
+++ b/src/app/_component/setting-layout/xml-configuration/xml-configuration.component.html
@@ -1,5 +1,5 @@
 <div class="panel">
-    <div class="panel-heading" style="font-size: 17px;">
+    <div class="panel-heading" style="font-size: 17px;padding-bottom: 0px;">
         <div class="row">
             <div class="col-lg-6" 
 				style="text-align: start;
