--- a/src/app/_content/app.less
+++ b/src/app/_content/app.less
@@ -489,7 +489,7 @@ td {
 }
 
 .modal-header {
-  background: gray;
+  background: black;
   color: white;
 }
 
@@ -849,4 +849,5 @@ a {
       margin-right: 0;
   }
 }
+
 
