--- a/src/app/_component/auth/login/login.component.html
+++ b/src/app/_component/auth/login/login.component.html
@@ -1,5 +1,7 @@
 <div class="login-form">
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" style="padding-bottom: 0px;">
+    <form [formGroup]="loginForm"
+        (ngSubmit)="onSubmit()"
+        style="padding-bottom: 0px;">
         <h2 class="text-center">Log in</h2>       
         <div class="form-group">
             <label for="username">Username</label>
@@ -22,8 +24,10 @@
             </div>
         </div>
         <div class="form-group">
-            <button type="submit" [disabled]="loading" class="btn btn-sm btn-danger">Login</button>&nbsp;
-            <button class="btn btn-sm btn-primary" (click)="register()" style="float:right">Register</button>
+            <button type="submit" [disabled]="loading" 
+                class="btn btn-sm btn-danger">Login</button>&nbsp;
+            <button class="btn btn-sm btn-primary" (click)="register()"
+                style="float:right">Register</button>
         </div>
     </form>
     <div style="border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px);
