--- a/src/app/_component/setting-layout/lookup-setting/cu-lookup/cu-lookup.component.html
+++ b/src/app/_component/setting-layout/lookup-setting/cu-lookup/cu-lookup.component.html
@@ -1,39 +1,58 @@
-<div class="col-md-8" style="padding-left: 10px;
-    height: 500px;overflow-y: auto;border-top: 2px solid #ddd;">
-    <div class="row">
-        <div class="col-lg-12" style="margin-top: 10px;">
-            <h4>Add Lookup</h4>
-            <hr>
-        </div>
-        <div class="col-md-4">
-            <div class="form-group">
-                <label for="lookup_type">Lookup Type</label>
-                <input type="lookup_type" class="form-control input-sm" maxlength="254"/>
+<!-- new lookupData -->
+<div class="modal fade" id="lookupDatas" role="dialog">
+    <div class="modal-dialog">
+      <!-- Modal content-->
+      <div class="modal-content" style="border: none">
+        <form *ngIf="lookupDataForm" [formGroup]="lookupDataForm" (ngSubmit)="submitLookupData()">
+            <div class="modal-header">
+                <button type="button" class="close" #closeLookupData data-dismiss="modal"
+                    (click)="resetEvent(4)" style="color: white;">&times;
+                </button>
+                <h4 class="modal-title">{{LOOKUP_DATA_TITLE}}</h4>
             </div>
-        </div>
-        <div class="col-md-5">
-            <div class="form-group">
-                <label for="description">Description</label>
-                <input type="description" class="form-control input-sm" maxlength="254"/>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label for="lookupType">LookupType</label>
+                    <input type="text" formControlName="lookupType" class="form-control input-sm"
+                        [ngClass]="{ 'is-invalid': lookupData.lookupType.errors }"
+                        pattern="^[-a-zA-Z0-9@\.+_]+$"
+                        oninput="this.value = this.value.toUpperCase()" />
+                    <div *ngIf="submitted && lookupData.lookupType.errors" class="invalid-feedback">
+                        <div *ngIf="lookupData.lookupType.errors.required" style="color: red;">
+                            LookupType is required
+                        </div>
+                        <div *ngIf="lookupData.lookupType.errors.pattern" style="color: red;">
+                            Only non space latter input
+                         </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="lookupValue">LookupValue</label>
+                        <textarea formControlName="lookupValue" class="form-control input-sm"
+                        [ngClass]="{ 'is-invalid': lookupData.lookupValue.errors }" rows="3"></textarea>
+                    <div *ngIf="submitted && lookupData.lookupValue.errors" class="invalid-feedback">
+                        <div *ngIf="lookupData.lookupValue.errors.required" style="color: red;">
+                            LookupValue is required
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="description">Description</label>
+                    <textarea type="text" formControlName="description" class="form-control input-sm"
+                        [ngClass]="{ 'is-invalid': lookupData.description.errors }" rows="3"></textarea>
+                    <div *ngIf="submitted && lookupData.description.errors" class="invalid-feedback" style="color: red;">
+                        <div *ngIf="lookupData.description.errors.required">
+                            Description is required
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="col-md-3">
-            <div class="form-group">
-                <label for="parentLookup">Parent Lookup</label>
-                <input type="parentLookup" class="form-control input-sm" maxlength="254"/>
+            <div class="modal-footer">
+                <button type="reset" class="btn btn-default" data-dismiss="modal"
+                    (click)="resetEvent(4)">Close</button>
+                <button type="submit" class="btn btn-primary">Save</button>
             </div>
-        </div>
-        <div class="col-md-12">
-            <div class="form-group">
-                <label for="lookup_value">Lookup Value</label>
-                <textarea type="lookup_value" class="form-control input-sm" cols="12" rows="14"
-                    placeholder="Enter Lookup Value"></textarea>
-            </div>
-        </div>
-        <div class="col-md-12" style="text-align: end;">
-            <button type="button" class="btn btn-default">Clear</button>
-            <button type="button" class="btn btn-default"
-                style="margin-left: 10px;background: #47b679;color: white;">Save</button>
-        </div>
+        </form>
+      </div>
     </div>
 </div>
