--- a/src/app/_component/setting-layout/setting-layout.component.html
+++ b/src/app/_component/setting-layout/setting-layout.component.html
@@ -1,8 +1,9 @@
 <ol class="breadcrumb" style="margin-bottom: 0px">
     <li><a routerLink="/home">Home</a></li>
     <li *ngFor="let breadcrumb of (breadcrumbs | async)">
-        <a [href]="breadcrumb.url">{{ breadcrumb.label }}</a>
+        <a [routerLink]="breadcrumb.url">{{ breadcrumb.label }}</a>
     </li>
+    <a (click)="back()" style="float: right;">Back</a>
 </ol>
 <div class="container-fluid">
     <div class="row" style="margin-top: 25px;">
