--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,35 +37,35 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"
           role="button" aria-haspopup="true" aria-expanded="false">
-          Profile<span class="caret"></span>
+          <span class="glyphicon glyphicon-user"></span> Profile<span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-          <li><a routerLink="/profile">My Profile</a></li>
+          <li>
+            <a routerLink="/profile">
+              My Profile
+            </a>
+          </li>
           <li>
             <a routerLink="/profile/lookup" 
               *ngIf="hasAccess(['ROLE_ADMIN', 'ROLE_MASTER_ADMIN'])">
-              Lookup Data
-            </a>
+              Lookup Data</a>
           </li>
           <li>
             <a routerLink="/profile/sourcetask"
               *ngIf="hasAccess(['ROLE_ADMIN', 'ROLE_MASTER_ADMIN'])">
-              SourceTask
-            </a>
+              SourceTask</a>
           </li>
           <!-- for queueu logs each user have there access -->
           <li><a routerLink="/profile/queuemessage">Queue Logs</a></li>
           <li>
             <a routerLink="/profile/searchengine"
               *ngIf="hasAccess(['ROLE_MASTER_ADMIN', 'ROLE_ADMIN'])">
-              Query Result
-            </a>
+              Query Result</a>
           </li>
           <li>
             <a routerLink="/profile/xml-config"
               *ngIf="hasAccess(['ROLE_ADMIN', 'ROLE_MASTER_ADMIN'])">
-              Xml Config
-            </a>
+              Xml Config</a>
           </li>
         </ul>
       </li>
